--- a/catalog/pattern-catalog-fn/pom.xml
+++ b/catalog/pattern-catalog-fn/pom.xml
@@ -107,36 +107,32 @@
 			<artifactId>antlr</artifactId>
 			<version>3.2</version>
 		</dependency>
-		<!--dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>stringtemplate</artifactId>
-			<version>3.1</version>
-		</dependency-->
 		<dependency>
 			<groupId>org.apache</groupId>
 			<artifactId>antlr</artifactId>
 			<version>3</version>
 		</dependency>
-		
-		<!--dependency>
-			<groupId>com.tibco.tra</groupId>
-			<artifactId>TIBCrypt</artifactId>
-			<version>5.12.1</version>
-		</dependency-->
+
 		<dependency>
 			<groupId>com.tibco.tra</groupId>
 			<artifactId>TIBCOrt</artifactId>
-			<version>5.12.1</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/TIBCOrt.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tra</groupId>
 			<artifactId>Deployment</artifactId>
-			<version>5.12.1</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/Deployment.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tra</groupId>
 			<artifactId>TIBCOtsm</artifactId>
-			<version>5.12.1</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/TIBCOtsm.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco</groupId>
@@ -149,54 +145,62 @@
 			<version>2.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>io.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-external-tibxml-io</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>net.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.net.eclipse.jar</systemPath>
 		</dependency>
 		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>util.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-external-tibxml-util</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>lex.yap.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.lex.yap.eclipse.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>xml.ae2xsd.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.ae2xsd.eclipse.jar</systemPath>
 		</dependency>
 		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>xml.sdk.eclipse</artifactId>
-			<version>5.60.100.002</version>
+			<groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-external-tibxml-sdk</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>xml.soap.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.soap.eclipse.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>xml.transform.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.transform.eclipse.jar</systemPath>
 		</dependency>
 		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>xml.ws.wsdl.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-external-tibcoxml-wsdl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>xml.xdata.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.xdata.eclipse.jar</systemPath>
 		</dependency>
 
 	</dependencies>
