--- a/channel/sb/pom.xml
+++ b/channel/sb/pom.xml
@@ -89,42 +89,32 @@
     </build>
 
     <dependencies>
-		
-		<!--dependency>
-			<groupId>com.tibco.str</groupId>
-			<artifactId>sbclient</artifactId>
-			<version>11.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.str</groupId>
-			<artifactId>lv-client</artifactId>
-			<version>11.0.1</version>
-		</dependency-->
+
 		<dependency>
 			<groupId>com.tibco.str</groupId>
 			<artifactId>sb-java-tools</artifactId>
-			<version>11.0.1</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/sb-java-tools.jar</systemPath>
 		</dependency>
     
 		<dependency>
 			<groupId>com.tibco.tra</groupId>
-			<artifactId>TIBCrypt</artifactId>
-			<version>5.12.1</version>
+			<artifactId>cep-external-tibcrypt</artifactId>
 		</dependency>
-		<!--dependency>
-			<groupId>com.tibco.tra</groupId>
-			<artifactId>TIBCOrt</artifactId>
-			<version>5.12.1</version>
-		</dependency-->
 		<dependency>
 			<groupId>com.tibco.tra</groupId>
 			<artifactId>Deployment</artifactId>
-			<version>5.12.1</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/Deployment.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tra</groupId>
 			<artifactId>TIBCOtsm</artifactId>
-			<version>5.12.1</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/TIBCOtsm.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco</groupId>
@@ -137,154 +127,63 @@
 			<version>2.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>io.eclipse</artifactId>
-			<version>5.60.100.001</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>util.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-external-tibxml-io</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>net.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.net.eclipse.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-external-tibxml-util</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>lex.yap.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.lex.yap.eclipse.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>xml.ae2xsd.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.ae2xsd.eclipse.jar</systemPath>
 		</dependency>
 		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>xml.sdk.eclipse</artifactId>
-			<version>5.60.100.002</version>
+			<groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-external-tibxml-sdk</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>xml.soap.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.soap.eclipse.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>xml.transform.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.transform.eclipse.jar</systemPath>
 		</dependency>
 		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>xml.ws.wsdl.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<groupId>com.tibco.businessevents</groupId>
+            <artifactId>cep-external-tibcoxml-wsdl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.tibcoxml</groupId>
 			<artifactId>xml.xdata.eclipse</artifactId>
-			<version>5.60.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.xdata.eclipse.jar</systemPath>
 		</dependency>
-		
-		<!--dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-core</artifactId>
-			<version>9.0.75</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-jasper</artifactId>
-			<version>9.0.75</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-el</artifactId>
-			<version>9.0.75</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-websocket</artifactId>
-			<version>9.0.75</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-dbcp</artifactId>
-			<version>9.0.75</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-annotations-api</artifactId>
-			<version>9.0.75</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-catalina-ha</artifactId>
-			<version>9.0.75</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-tribes</artifactId>
-			<version>9.0.75</version>
-		</dependency-->
-		
-		<!--dependency>
-			<groupId>com.tibco.rv</groupId>
-			<artifactId>tibrvj</artifactId>
-			<version>8.5.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.rv</groupId>
-			<artifactId>tibrvjsd</artifactId>
-			<version>8.5.2</version>
-		</dependency-->
-		
-		<!--dependency>
-			<groupId>com.tibco.hawk</groupId>
-			<artifactId>ami</artifactId>
-			<version>7.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.hawk</groupId>
-			<artifactId>console</artifactId>
-			<version>7.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.hawk</groupId>
-			<artifactId>console_agent_shared</artifactId>
-			<version>7.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.hawk</groupId>
-			<artifactId>talon</artifactId>
-			<version>7.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.hawk</groupId>
-			<artifactId>util</artifactId>
-			<version>7.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.hawk</groupId>
-			<artifactId>publisher</artifactId>
-			<version>7.1.0</version>
-		</dependency-->
-		
-		<!--dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpcore</artifactId>
-			<version>4.4.14</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpcore-nio</artifactId>
-			<version>4.4.14</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
-			<version>3.1</version>
-		</dependency-->
 		
 		<dependency>
             <groupId>com.tibco.businessevents</groupId>
@@ -302,12 +201,6 @@
             <groupId>com.tibco.businessevents</groupId>
             <artifactId>cep-drivers</artifactId>
         </dependency>
-		
-		<!--dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>antlr</artifactId>
-			<version>3.2</version>
-		</dependency-->
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>stringtemplate</artifactId>
@@ -322,77 +215,107 @@
 		<dependency>
 			<groupId>com.tibco.genxdm.bridge</groupId>
 			<artifactId>xinode</artifactId>
-			<version>1.4.1.002</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.genxdm.bridge.xinode.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.genxdm</groupId>
 			<artifactId>extras</artifactId>
-			<version>1.4.400.002</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.genxdm.extras.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.genxdm.processor.xslt</groupId>
 			<artifactId>functions</artifactId>
-			<version>1.4.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.genxdm.processor.xslt.functions.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.genxdm.processor.xslt</groupId>
 			<artifactId>processor</artifactId>
-			<version>1.4.100.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.genxdm.processor.xslt.processor.jar</systemPath>
 		</dependency>		
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>cxf.common</artifactId>
-			<version>1.3.500.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.common.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>cxf.ootb</artifactId>
-			<version>1.3.500.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.ootb.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>cxf.ootb.runtime</artifactId>
-			<version>1.3.900.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.ootb.runtime.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>cxf.runtime</artifactId>
-			<version>1.3.900.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.runtime.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>cxf.wizard</artifactId>
-			<version>1.3.500.001</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.wizard.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>dictionaryapi</artifactId>
-			<version>1.0.0.003</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.dictionaryapi.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>mappermodel.emfapi</artifactId>
-			<version>1.0.1600.002</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.mapperui.emfapi.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>mappermodel</artifactId>
-			<version>1.0.1600.002</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.mappermodel.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>mapperui.emfapi</artifactId>
-			<version>1.0.1400.002</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.mapperui.emfapi.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>mapperui</artifactId>
-			<version>1.0.1400.002</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.mapperui.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco.xml</groupId>
 			<artifactId>xmodel</artifactId>
-			<version>1.0.1800.002</version>
+			<version>${be.version}</version>
+			<scope>system</scope>
+			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.xmodel.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.genxdm</groupId>
@@ -479,38 +402,6 @@
 			<artifactId>xslt2.api</artifactId>
 			<version>1.4.100.001</version>
 		</dependency>
-		
-		<dependency>
-			<groupId>com.tibco.as</groupId>
-			<artifactId>as-common</artifactId>
-			<version>2.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.as</groupId>
-			<artifactId>as-agent</artifactId>
-			<version>2.4.1</version>
-		</dependency>
-		
-		<!--dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>2.15.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.15.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.15.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-yaml</artifactId>
-			<version>2.15.0</version>
-		</dependency-->
 		
 	</dependencies>
 
