--- a/catalog/analytics-catalog-fn/pom.xml
+++ b/catalog/analytics-catalog-fn/pom.xml
@@ -162,7 +162,7 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>com.tibco.tra</groupId>
+			<groupId>com.tibco.businessevents</groupId>
 			<artifactId>cep-external-tibcrypt</artifactId>
 		</dependency>
 		<dependency>
@@ -171,13 +171,6 @@
 			<version>${be.version}</version>
 			<scope>system</scope>
 			<systemPath>${be.home}/lib/ext/tibco/Deployment.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tra</groupId>
-			<artifactId>TIBCOtsm</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/TIBCOtsm.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco</groupId>
