--- a/channel/sb/pom.xml
+++ b/channel/sb/pom.xml
@@ -18,6 +18,7 @@
 	
 	<properties>
         <sb.version>11.0.1</sb.version>
+	<sb.home>C:/dev_env/tsi-root/tibco/str/11.0.1/V3-GA/win/x86_64/lib</sb.home>
     </properties>
 	
 	<build>
@@ -95,7 +96,7 @@
 			<artifactId>sb-java-tools</artifactId>
 			<version>${be.version}</version>
 			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/sb-java-tools.jar</systemPath>
+			<systemPath>${sb.home}/sb-java-tools.jar</systemPath>
 		</dependency>
     
 		<dependency>
@@ -108,13 +109,6 @@
 			<version>${be.version}</version>
 			<scope>system</scope>
 			<systemPath>${be.home}/lib/ext/tibco/Deployment.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tra</groupId>
-			<artifactId>TIBCOtsm</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/TIBCOtsm.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.tibco</groupId>
