--- a/catalog/analytics-catalog-fn/pom.xml
+++ b/catalog/analytics-catalog-fn/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <analytics.version>1.12.261</analytics.version>
+	<terr.home>C:/dev_env/tsi-root/tibco/terr/6.0.2/V13-GA/win/x86_64/library/terrJava/java</terr.home>
     </properties>
 
     <build>
@@ -89,348 +90,52 @@
     </build>
 
     <dependencies>
-		<dependency>
-            <groupId>com.tibco.businessevents</groupId>
-            <artifactId>cep-common</artifactId>
+	<dependency>
+	        <groupId>com.tibco.businessevents</groupId>
+	        <artifactId>cep-common</artifactId>
         </dependency>
-		<dependency>
-            <groupId>com.tibco.businessevents</groupId>
-            <artifactId>cep-kernel</artifactId>
-        </dependency>
-		
-        <dependency>
-			<groupId>com.tibco</groupId>
-			<artifactId>terr</artifactId>
-			<version>6.0.2</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-math3</artifactId>
-			<version>3.6.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jpmml</groupId>
-			<artifactId>pmml-evaluator</artifactId>
-			<version>1.4.15</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jpmml</groupId>
-			<artifactId>pmml-evaluator-extension</artifactId>
-			<version>1.4.15</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jpmml</groupId>
-			<artifactId>pmml-model</artifactId>
-			<version>1.4.15</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jpmml</groupId>
-			<artifactId>pmml-schema</artifactId>
-			<version>1.3.9</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>23.0</version>
-		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.9.9</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>jakarta.xml.soap</groupId>
-			<artifactId>jakarta.xml.soap-api</artifactId>
-			<version>1.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.messaging.saaj</groupId>
-			<artifactId>saaj-impl</artifactId>
-			<version>1.5.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jvnet.staxex</groupId>
-			<artifactId>stax-ex</artifactId>
-			<version>1.8.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.woodstox</groupId>
-			<artifactId>stax2-api</artifactId>
-			<version>4.1</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.tibco.businessevents</groupId>
-			<artifactId>cep-external-tibcrypt</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tra</groupId>
-			<artifactId>Deployment</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/Deployment.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco</groupId>
-			<artifactId>tibjms</artifactId>
-			<version>10.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>jms</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.businessevents</groupId>
-            <artifactId>cep-external-tibxml-io</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>net.eclipse</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.net.eclipse.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.businessevents</groupId>
-            <artifactId>cep-external-tibxml-util</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>lex.yap.eclipse</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.lex.yap.eclipse.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>xml.ae2xsd.eclipse</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.ae2xsd.eclipse.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.businessevents</groupId>
-            <artifactId>cep-external-tibxml-sdk</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>xml.soap.eclipse</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.soap.eclipse.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>xml.transform.eclipse</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.transform.eclipse.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.businessevents</groupId>
-            <artifactId>cep-external-tibcoxml-wsdl</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.tibcoxml</groupId>
-			<artifactId>xml.xdata.eclipse</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.tibcoxml.xml.xdata.eclipse.jar</systemPath>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.tibco.genxdm.bridge</groupId>
-			<artifactId>xinode</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.genxdm.bridge.xinode.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.genxdm</groupId>
-			<artifactId>extras</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.genxdm.extras.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.genxdm.processor.xslt</groupId>
-			<artifactId>functions</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.genxdm.processor.xslt.functions.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.genxdm.processor.xslt</groupId>
-			<artifactId>processor</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.genxdm.processor.xslt.processor.jar</systemPath>
-		</dependency>		
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>cxf.common</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.common.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>cxf.ootb</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.ootb.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>cxf.ootb.runtime</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.ootb.runtime.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>cxf.runtime</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.runtime.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>cxf.wizard</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.cxf.wizard.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>dictionaryapi</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.dictionaryapi.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>mappermodel.emfapi</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.mapperui.emfapi.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>mappermodel</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.mappermodel.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>mapperui.emfapi</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.mapperui.emfapi.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>mapperui</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.mapperui.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.tibco.xml</groupId>
-			<artifactId>xmodel</artifactId>
-			<version>${be.version}</version>
-			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tibco/com.tibco.xml.xmodel.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm</groupId>
-			<artifactId>api</artifactId>
-			<version>1.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm</groupId>
-			<artifactId>bridge.axiom</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm</groupId>
-			<artifactId>bridge.dom</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm</groupId>
-			<artifactId>bridgekit</artifactId>
-			<version>1.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm.processor</groupId>
-			<artifactId>convert</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm.processor</groupId>
-			<artifactId>io</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm.processor</groupId>
-			<artifactId>w3c.xs.validation</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm.processor</groupId>
-			<artifactId>w3c.xs</artifactId>
-			<version>1.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm.processor</groupId>
-			<artifactId>wsdl</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm.processor</groupId>
-			<artifactId>xop</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm.processor</groupId>
-			<artifactId>xpath.v10</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm.processor</groupId>
-			<artifactId>xpath.v20</artifactId>
-			<version>1.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm</groupId>
-			<artifactId>wsdl.api</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm</groupId>
-			<artifactId>xop.api</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm</groupId>
-			<artifactId>xpath.v10</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm</groupId>
-			<artifactId>xpath.v20</artifactId>
-			<version>1.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.genxdm</groupId>
-			<artifactId>xslt2.api</artifactId>
-			<version>1.4.100.001</version>
-		</dependency>
+	<dependency>
+	        <groupId>com.tibco.businessevents</groupId>
+	        <artifactId>cep-kernel</artifactId>
+        </dependency>	
+	<dependency>
+	    	<groupId>com.tibco</groupId>
+	    	<artifactId>terr</artifactId>
+		<version>${be.version}</version>
+		<scope>system</scope>
+		<systemPath>${terr.home}/terrJava.jar</systemPath>
+	</dependency>
+	<dependency>
+		<groupId>org.jpmml</groupId>
+		<artifactId>pmml-evaluator-extension</artifactId>
+		<version>1.4.15</version>
+	</dependency>
+	<dependency>
+		<groupId>com.sun.xml.messaging.saaj</groupId>
+		<artifactId>saaj-impl</artifactId>
+		<version>1.5.1</version>
+	</dependency>		
+	<dependency>
+		<groupId>com.tibco.businessevents</groupId>
+		<artifactId>cep-external-tibcrypt</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>com.tibco.tra</groupId>
+		<artifactId>Deployment</artifactId>
+		<version>${be.version}</version>
+		<scope>system</scope>
+		<systemPath>${be.home}/lib/ext/tibco/Deployment.jar</systemPath>
+	</dependency>
+	<dependency>
+		<groupId>org.genxdm</groupId>
+		<artifactId>api</artifactId>
+		<version>1.4.1</version>
+	</dependency>
+	<dependency>
+		<groupId>org.genxdm</groupId>
+		<artifactId>bridgekit</artifactId>
+		<version>1.4.1</version>
+	</dependency>
     </dependencies>
 
 </project>
