--- a/metric/liveview/pom.xml
+++ b/metric/liveview/pom.xml
@@ -25,14 +25,14 @@
 		<artifactId>sbclient</artifactId>
 		<version>${be.version}</version>
 		<scope>system</scope>
-		<systemPath>${sb.home}/lib/ext/tibco/sbclient.jar</systemPath>
+		<systemPath>${sb.home}/sbclient.jar</systemPath>
 	</dependency>
 	<dependency>
 		<groupId>com.tibco.str</groupId>
 		<artifactId>lv-client</artifactId>
 		<version>${be.version}</version>
 		<scope>system</scope>
-		<systemPath>${sb.home}/lib/ext/tibco/lv-client.jar</systemPath>
+		<systemPath>${sb.home}/lv-client.jar</systemPath>
 	</dependency>
 	<dependency>
         <groupId>com.tibco.businessevents</groupId>
