--- a/metric/liveview/pom.xml
+++ b/metric/liveview/pom.xml
@@ -16,7 +16,7 @@
 
   <properties>
 	<liveview.version>1.0.0</liveview.version>
-	<sb.home>C:/dev_env/tsi-root/tibco/str/11.0.1/V3-GA/win/x86_64/lib</sb.home>
+	<sb.home>C:/dev_env/tsi-root/tibco/str/11.0.1/V3-GA/win/x86_64</sb.home>
   </properties>
 
   <dependencies>
@@ -25,14 +25,14 @@
 		<artifactId>sbclient</artifactId>
 		<version>${be.version}</version>
 		<scope>system</scope>
-		<systemPath>${sb.home}/sbclient.jar</systemPath>
+		<systemPath>${sb.home}/lib/sbclient.jar</systemPath>
 	</dependency>
 	<dependency>
 		<groupId>com.tibco.str</groupId>
 		<artifactId>lv-client</artifactId>
 		<version>${be.version}</version>
 		<scope>system</scope>
-		<systemPath>${sb.home}/lv-client.jar</systemPath>
+		<systemPath>${sb.home}/lib/lv-client.jar</systemPath>
 	</dependency>
 	<dependency>
         <groupId>com.tibco.businessevents</groupId>
