--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ local.properties
 .loadpath
 .factorypath
 /src/main/resources/rebel.xml
+*/META-INF/*
+build.properties
 
 # External tool builders
 .externalToolBuilders/**
